--- a/.github/ISSUE_TEMPLATE/add-new-provider.yml
+++ b/.github/ISSUE_TEMPLATE/add-new-provider.yml
@@ -1,6 +1,6 @@
 name: New Provider
 description: Request a new provider added
-title: "[PROVIDER]: "
+title: "[PROVIDER] <title>"
 labels: ["New Provider"]
 assignees:
   - ahwm
