--- a/PaymentGateway/PaymentGateway.csproj
+++ b/PaymentGateway/PaymentGateway.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net452</TargetFrameworks>
+		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net472</TargetFrameworks>
 		<PackageId>PaymentGatewayClient</PackageId>
 		<Authors>Adam Humpherys</Authors>
 		<Company />
@@ -10,8 +10,8 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/ahwm/payment-gateway-client</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/ahwm/payment-gateway-client</RepositoryUrl>
-		<Version>0.0.1-alpha.4</Version>
-		<PackageReleaseNotes>Added new providers</PackageReleaseNotes>
+		<Version>0.0.1-beta.1</Version>
+		<PackageReleaseNotes>Implemented Sale/Authorization/Credit/Validate/Offline and Capture.</PackageReleaseNotes>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<Description>Client for interacting with Transaction Gateway endpoints for multiple providers such as Network Merchants (NMI)</Description>
 		<PackageTags>nmi bottomline payment gateway processor api mastercard amex visa canyonpay cyogate epna 0merchant easypaydirect vizypay durango</PackageTags>
@@ -21,7 +21,7 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
 	<ItemGroup>
