--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,14 @@ artifacts:
 for:
 
 -
+ branches:
+   only:
+     - master
+ 
  configuration: Release
   
  deploy:
    provider: NuGet
    artifact: /.nupkg/
    api_key:
-     secure: d6j0MYClUTLLg2QiYeQVhiU7akN9KHHt/OqOo+W+Hk2pVkH2mtp/KtsHU3etNT4k
+     secure: VNM5wnGi0PuiIXenGuDxuF+KvS30kSDa97hCQHkEE2DZ2s8bJC40DPJol7kEUQaS
