--- a/PaymentGateway/PaymentGateway.csproj
+++ b/PaymentGateway/PaymentGateway.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net472</TargetFrameworks>
+		<TargetFrameworks>net462;netstandard2.1</TargetFrameworks>
 		<PackageId>PaymentGatewayClient</PackageId>
 		<Authors>Adam Humpherys</Authors>
 		<Company />
@@ -32,7 +32,7 @@
 		</PackageReference>
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
 		<Reference Include="mscorlib" />
 		<Reference Include="System.Web" />
 		<Reference Include="System.Net.Http" />
