--- a/PaymentGateway/PaymentGateway.csproj
+++ b/PaymentGateway/PaymentGateway.csproj
@@ -50,7 +50,7 @@
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
 	</PropertyGroup>
 	
-	<PropertyGroup Condition="'$(APPVEYOR)'=='True'">
+	<PropertyGroup Condition="'$(APPVEYOR)'=='True' Or '$(GITHUB_ACTIONS)'=='true'">
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 	</PropertyGroup>
 
