--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@ name: build
 on:
   push:
     branches:
-    - main
+      - "**"
+  pull_request:
+    branches:
+      - "main"
 jobs:
   build:
     runs-on: windows-latest
