--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup .NET
+      - name: Setup .NET 7
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
+      - name: Setup .NET 3.1
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 3.1.x
       - name: Build
         run: dotnet build
       - name: Test
