--- a/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
+++ b/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net6.0;net472</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-	<PackageReference Include="Shouldly" Version="4.2.1" />
+	  <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="WireMock.Net" Version="1.5.39" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
