--- a/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
+++ b/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net462</TargetFrameworks>
+    <TargetFrameworks>netcore3.1;net6.0;net8.0;net461;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
