--- a/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
+++ b/PaymentGatewayClient.Tests/PaymentGatewayClient.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net6.0;net7.0;net8.0;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <ItemGroup>
