--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: 7.0.x
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 6.0.x
       - name: Setup .NET 3.1
         uses: actions/setup-dotnet@v5
         with:
